--- a/src/haf/system/static/system/partials/users.html
+++ b/src/haf/system/static/system/partials/users.html
@@ -2,8 +2,8 @@
     <div class="span8">
         <h2>User Management</h2>
     </div><!-- /.span8 -->
-    <div class="span3" data-step="2" data-intro="This button will take you to a wizard where you can add a User.">
-        <a class="btn btn-primary" href="#/system/users/new">New User</a>
+    <div class="span4" data-step="2" data-intro="This button will take you to a wizard where you can add a User." align="right">
+        <a class="btn btn-primary" href="#/system/users/new">Add a New User</a>
     </div><!-- /.span3 -->
   </div><!-- /.row-fluid -->
   <div class="row-fluid">
@@ -30,5 +30,5 @@ information pertaining to that User.">
           </td>
       </tr>
     </table><!-- /.table.table-striped.table-bordered -->
-    <a class="btn btn-primary" href="#/system/users/new">New User</a>
+    <a class="btn btn-primary" href="#/system/users/new">Add a New User</a>
   </div>
