--- a/src/haf/powr/static/powr/partials/devices/detail.html
+++ b/src/haf/powr/static/powr/partials/devices/detail.html
@@ -1,43 +1,48 @@
 
     <h2 data-step="1" data-intro="This page specifies the details of a specific Device.">Details of {{ device.name }}</h2>
-
-    <table class="table table-striped table-bordered">
-        <tr>
-            <td data-step="2" data-intro="This is the name that the Device is known by in the system, this can be edited.">Name</td>
-            <td style="width: 40%; height: 30px">
-                <div ng-show="!editName" ng-click="editName = true">{{ device.name }}</div>
+<div class="row-fluid" ><div class="span8">
+		<div class="row-fluid"  data-intro="This is the name that the Device is known by in the system, this can be edited.">
+        <div class="span4" align="right">Name</div>
+				<div class="span8">
+        <div ng-show="!editName" ng-click="editName = true">{{ device.name }}</div>
                 <form class="form-inline" ng-show="editName">
                   <input type="text" ng-model="device.name" class="input-small">
                   <button class="btn" ng-click="save(); editName=false;" class="input-small">Save</button>
                   <button class="btn btn-warn" ng-click="cancel(); editName=false;" class="input-small">Cancel</button>
                 </form>
-            </td>
-        </tr>
-        <tr>
-            <td data-step="3" data-intro="This field determines whether the system records information on this specific
-Device. This can be edited.">Enabled</td>
-            <td style="height: 30px">
+        </div>
+    </div>
+    
+    <div class="row-fluid" data-intro="This field determines whether the system records information on this specific
+Device. This can be edited."><div class="span4" align="right">Enabled</div>
+				<div class="span8">
                 <div ng-click="editEnabled = true" ng-show="!editEnabled">{{ device.enabled }}</div>
                 <form class="form-inline" ng-show="editEnabled">
                     <input type="checkbox" ng-model="device.enabled" class="input-small">
                     <button class="btn" ng-click="save(); editEnabled=false;" class="input-small">Save</button>
                     <button class="btn btn-warn" ng-click="cancel(); editEnabled=false;" class="input-small">Cancel</button>
                 </form>
-            </td>
-
-        </tr>
-        <tr>
-            <td data-step="4" data-intro="This field shows the Satellite associated with the Device. This can be
-edited, though the drop-down list displays all Satellites, not just available ones.">Associated Satellite</td>
-            <td ng-show="device.satellite == '' && !editSatellite" ng-click="editSatellite=true">Not associated with a satellite</td>
-            <td ng-show="device.satellite != '' && !editSatellite" ng-click="editSatellite=true">{{ device.satellite.serial_number }}</td>
-            <td ng-show="editSatellite">
+    </div></div>
+    
+     <div class="row-fluid" data-intro="This field shows the Satellite associated with the Device. This can be
+edited, though the drop-down list displays all Satellites, not just available ones."><div class="span4" align="right">Associated Satellite</div>
+				<div class="span8">
+                <div ng-show="device.satellite == '' && !editSatellite" ng-click="editSatellite=true">Not associated with a satellite</div>
+            <div ng-show="device.satellite != '' && !editSatellite" ng-click="editSatellite=true">{{ device.satellite.serial_number }}</div>
+               <div ng-show="editSatellite">
                 <select ng-model="device.satellite">
                     <option ng-repeat="satellite in satellites" value="{{ satellite.resource_uri }}">{{ satellite.serial_number }}</option>
                 </select>
                 <button class="btn" ng-click="save(); editSatellite=false;">Save</button>
                 <button class="btn btn-warn" ng-click="cancel(); editSatellite=false;">Cancel</button>
-            </td>
-        </tr>
-    </table>
+            </div>
+
+</div></div>
+    
+    </div>
+    <div class="span4"><img src="static/img/devicegraphic.png" /></div>
+  </div>  
+    
+    
+    
     <button type="button" value="Back" onclick="history.go(-1)" class="btn">Back</button>
