--- a/src/haf/static/partials/dashboard.html
+++ b/src/haf/static/partials/dashboard.html
@@ -2,6 +2,9 @@
       <div class="jumbotron">
         <h1>Almost there!</h1>
         <p class="lead">Welcome to POW-R, just a few more steps and you will be monitoring your power usage! First we need to add some Devices so that we have some data.</p>
+        <div class="row-fluid" align="center">
+        <a class="btn btn-primary" href="#/devices/new">Add your First Device</a>
+        </div>
       </div>
 
       <hr>
