--- a/src/haf/system/static/system/partials/users/detail.html
+++ b/src/haf/system/static/system/partials/users/detail.html
@@ -1,42 +1,39 @@
+<h2 data-step="1" data-intro="This page specifies all the details related to a specific User.">Modify user {{ object.username }}</h2>
+<h3 ng-show="message != ''">{{ message }}</h3>
+<div class="row-fluid">
+	<div class="span8">
+		<div class="row-fluid" data-step="2" data-intro="This field is the name that the User is known by in the system, this cannot be edited.">
+			<div class="span4" align="right">Username</div>
+      <div class="span8">{{ object.username }}</div>
+    </div>
+    
+    <div class="row-fluid" data-step="3" data-intro="These fields are designated to identify the User on the specific User page.">
+			<div class="span4" align="right">First Name</div>
+      <div class="span8">
+        <div ng-click="editFirstName = true" ng-show="!editFirstName">{{ object.first_name }}</div>
+        <form class="form-inline" ng-show="editFirstName">
+          <input type="text" ng-model="object.first_name" class="input-small">
+          <button class="btn" ng-click="save(); editFirstName=false;" class="input-small">Save</button>
+          <button class="btn btn-warn" ng-click="cancel(); editFirstName=false;" class="input-small">Cancel</button>
+        </form>
+      </div>
+    </div>
+    
+    <div class="row-fluid" data-step="3" data-intro="These fields are designated to identify the User on the specific User page.">
+			<div class="span4" align="right">First Name</div>
+      <div class="span8">
+        <div ng-click="editLastName = true" ng-show="!editLastName">{{ object.last_name }}</div>
+        <form class="form-inline" ng-show="editLastName">
+          <input type="text" ng-model="object.last_name" class="input-small">
+          <button class="btn" ng-click="save(); editLastName=false;" class="input-small">Save</button>
+          <button class="btn btn-warn" ng-click="cancel(); editLastName=false;" class="input-small">Cancel</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="span4"><img src="static/img/usergraphic.png" /></div>
+</div>
 
-    <h2 data-step="1" data-intro="This page specifies all the details related to a specific User.">Details of {{ object.username }}</h2>
-    <h3 ng-show="message != ''">{{ message }}</h3>
-
-    <table class="table table-striped table-bordered">
-        <tr data-step="2" data-intro="This field is the name that the User is known by in the system, this can be edited.">
-            <td>Username</td>
-            <td style="width: 40%; height: 30px">
-                <div ng-show="!editUserName" ng-click="editUserName = true">{{ object.username }}</div>
-                <form class="form-inline" ng-show="editUserName">
-                  <input type="text" ng-model="object.username" class="input-small">
-                  <button class="btn" ng-click="save(); editUserName=false;" class="input-small">Save</button>
-                  <button class="btn btn-warn" ng-click="cancel(); editUserName=false;" class="input-small">Cancel</button>
-                </form>
-            </td>
-        </tr>
-        <tr data-step="3" data-intro="These fields are designated to identify the User on the specific User page.">
-            <td>First Name</td>
-            <td style="height: 30px">
-                <div ng-click="editFirstName = true" ng-show="!editFirstName">{{ object.first_name }}.</div>
-                <form class="form-inline" ng-show="editFirstName">
-                    <input type="text" ng-model="object.first_name" class="input-small">
-                    <button class="btn" ng-click="save(); editFirstName=false;" class="input-small">Save</button>
-                    <button class="btn btn-warn" ng-click="cancel(); editFirstName=false;" class="input-small">Cancel</button>
-                </form>
-            </td>
-        </tr>
-        <tr data-step="4" data-intro="These fields are designated to identify the User on the specific User page.">
-            <td>Last Name</td>
-            <td style="height: 30px">
-                <div ng-click="editLastName = true" ng-show="!editLastName">{{ object.last_name }}.</div>
-                <form class="form-inline" ng-show="editLastName">
-                    <input type="text" ng-model="object.last_name" class="input-small">
-                    <button class="btn" ng-click="save(); editLastName=false;" class="input-small">Save</button>
-                    <button class="btn btn-warn" ng-click="cancel(); editLastName=false;" class="input-small">Cancel</button>
-                </form>
-            </td>
-        </tr>
-    </table>
     
     <a role="button" class="btn" onclick="$('#passwordModal').modal('show');" data-step="5" data-intro="This button brings up a wizard where the User can change their password.">Change password</a>
     
