--- a/src/haf/system/static/system/partials/users.html
+++ b/src/haf/system/static/system/partials/users.html
@@ -26,7 +26,7 @@ information pertaining to that User.">
           <td>{{ object.first_name }}</td>
           <td>{{ object.last_name }}</td>
           <td style="width: 10%">
-              <button class="btn btn-danger" ng-click="delete()" data-step="3" data-intro="This button allows you to delete an existing User.">Delete</button>
+              <button class="btn btn-danger" ng-click="delete(object)" data-step="3" data-intro="This button allows you to delete an existing User.">Delete</button>
           </td>
       </tr>
     </table><!-- /.table.table-striped.table-bordered -->
