--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -164,6 +164,7 @@
               <input id="login-username" type="text" class="input-block-level" placeholder="Username" ng-model="form.username">
               <input id="login-password" type="password" class="input-block-level" placeholder="Password" ng-model="form.password">
               <button id="login-submit" class="btn btn-large btn-primary" type="submit" ng-click="login()">Sign in</button>
+              <img id="login-spinner" src="{{ STATIC_URL }}img/ajax-loader.gif" style="display: none" />
             </form>
       </div>
   </div><!-- /.modal.fade -->
