--- a/src/haf/powr/static/powr/partials/graphs/new.html
+++ b/src/haf/powr/static/powr/partials/graphs/new.html
@@ -109,13 +109,13 @@ absolute or relative dates.">
               <div class="row">
                 <div class="input-prepend">
                   <span class="add-on" style="width:70px;">Start Time</span>
-                  <input class="span3" type="text" placeholder="Click to select" ng-model="chart.start_date">
+                  <input id="startabsolutetime" class="span3" type="text" placeholder="Click to select" ng-model="chart.start_date">
                 </div>
               </div><!-- /.row -->
               <div class="row">
                 <div class="input-prepend">
                   <span class="add-on" style="width:70px;">End Time</span>
-                  <input class="span3" type="text" placeholder="Click to select" ng-model="chart.stop_date">
+                  <input id="endabsolutetime" class="span3" type="text" placeholder="Click to select" ng-model="chart.stop_date">
                 </div>
               </div><!-- /.row -->
               <div class="row">
