--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -31,6 +31,7 @@
     window.LOGIN_URL = "{% url 'login' %}";
     window.LOGOUT_URL = "{% url 'logout' %}";
     window.LOGGED_IN = {{ user.is_authenticated|lower }};
+
   </script>
 
   <!-- Include the AngularJS stuff right away, because it is needed for everything... -->
@@ -84,63 +85,61 @@
 <body>
   <div class="container">
 
-    <!-- <div class="masthead"> -->
-      <div class="row-fluid">
-        <div class="span6">
-            <img src="{{ STATIC_URL }}img/pow-r_logo.png" />
-        </div><!-- /.span8 -->
-        <div class="span6">
-        <h4 class="muted" align="right">Power Outlet Wireless Reporting</h4>
-        </div>
-      </div><!-- /.row-fluid -->
-      <div class="navbar" ng-app="navList">
-        <div class="navbar-inner">
-          <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <div class="nav-collapse collapse">
-              <ul class="nav" ng-controller="NavCtrl">
-                <li class="nav-item" ng-class="navClass('dashboard')"><a href="#/dashboard">Dashboard</a></li>
-                <li ng-class="navClass('devices')" class="dropdown nav-item">
-                  <a class="dropdown-toggle" data-toggle="dropdown">Devices <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#/devices">View Current Devices</a></li>
-                    <li><a href="#/devices/new">Add a New Device</a></li>
-                  </ul>
-                </li>
-                <li ng-class="navClass('graphs')" class="dropdown nav-item">
-                  <a class="dropdown-toggle" data-toggle="dropdown" >Graphs <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#/graphs/">View Current Graphs</a></li>
-                    <li><a href="#/graphs/new">Make a New Graph</a></li>
-                    <li><a href="#">Export Graphs</a></li>
-                  </ul>
-                </li>
-                <li ng-class="navClass('system')" class="dropdown nav-item">
-                  <a class="dropdown-toggle" data-toggle="dropdown">System <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#/system/users">View Current Users</a></li>
-                    <li><a href="#/system/users/new">Add a New User</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item" style="float:right;" ng-controller="LogoutCtrl">
-                   <a  ng-click="logout()" ng-show="loggedIn">Log out</a></li>
-                <li class="nav-item" style="float:right;"><a href="#">Help</a></li>
-              </ul> <!-- /.nav --> 
-            </div><!-- /.nav-collapse.collapse -->
-          </div> <!-- /.container --> 
-        </div> <!-- /.navbar-inner --> 
-      </div> <!-- /.navbar --> 
-    <!-- </div> <!-- /.masthead --> 
+    <div class="row-fluid">
+      <div class="span6">
+          <img src="{{ STATIC_URL }}img/pow-r_logo.png" />
+      </div><!-- /.span8 -->
+      <div class="span6">
+      <h4 class="muted" align="right">Power Outlet Wireless Reporting</h4>
+      </div>
+    </div><!-- /.row-fluid -->
+    <div class="navbar" ng-app="navList">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="nav-collapse collapse">
+            <ul class="nav" ng-controller="NavCtrl">
+              <li class="nav-item" ng-class="navClass('dashboard')"><a href="#/dashboard">Dashboard</a></li>
+              <li ng-class="navClass('devices')" class="dropdown nav-item">
+                <a class="dropdown-toggle" data-toggle="dropdown">Devices <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#/devices">View Current Devices</a></li>
+                  <li><a href="#/devices/new">Add a New Device</a></li>
+                </ul>
+              </li>
+              <li ng-class="navClass('graphs')" class="dropdown nav-item">
+                <a class="dropdown-toggle" data-toggle="dropdown" >Graphs <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#/graphs/">View Current Graphs</a></li>
+                  <li><a href="#/graphs/new">Make a New Graph</a></li>
+                  <li><a href="#">Export Graphs</a></li>
+                </ul>
+              </li>
+              <li ng-class="navClass('system')" class="dropdown nav-item">
+                <a class="dropdown-toggle" data-toggle="dropdown">System <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#/system/users">View Current Users</a></li>
+                  <li><a href="#/system/users/new">Add a New User</a></li>
+                </ul>
+              </li>
+              <li class="nav-item" style="float:right;" ng-controller="LogoutCtrl">
+                 <a  ng-click="logout()" ng-show="loggedIn">Log out</a></li>
+              <li class="nav-item" style="float:right;"><a ng-click="help()">Help</a></li>
+            </ul> <!-- /.nav --> 
+          </div><!-- /.nav-collapse.collapse -->
+        </div> <!-- /.container --> 
+      </div> <!-- /.navbar-inner --> 
+    </div> <!-- /.navbar --> 
     
     <br />
     
     <div id="alerts"></div>
 
-    <div class="container" ng-view></div>
+    <div class="container" id="main-view" ng-view></div>
 
     <hr>
 
@@ -180,9 +179,7 @@
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js" type="text/javascript"></script>
   <!-- <script src="{{ STATIC_URL }}components/twitter-bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.js" type="text/javascript"></script> -->
   <!-- JQuery UI and Date Picker -->
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.core.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.datepicker.js"></script>
-  <!-- <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.slider.js"></script> -->
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery-ui.custom.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-timepicker-addon/jquery-ui-timepicker-addon.js"></script>
   <!-- Intro.js stuff 
   <script type="text/javascript" src="{{ STATIC_URL }}components/intro.js/intro.js"></script>
