Made ALL the changes!
Fixed numerous small things during the testing


git-svn-id: svn://dunari.cis.vtc.edu/POWER@521 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/static/powr/partials/graphs/new.html
+++ b/src/haf/powr/static/powr/partials/graphs/new.html
@@ -109,13 +109,13 @@ absolute or relative dates.">
               <div class="row">
                 <div class="input-prepend">
                   <span class="add-on" style="width:70px;">Start Time</span>
-                  <input id="startabsolutetime" class="span3" type="text" placeholder="Click to select" ng-model="chart.start_date">
+                  <input id="startabsolutetime" class="span3" type="text" placeholder="yyyy-MM-dd hh:mm:ss" ng-model="chart.start_date">
                 </div>
               </div><!-- /.row -->
               <div class="row">
                 <div class="input-prepend">
                   <span class="add-on" style="width:70px;">End Time</span>
-                  <input id="endabsolutetime" class="span3" type="text" placeholder="Click to select" ng-model="chart.stop_date">
+                  <input id="endabsolutetime" class="span3" type="text" placeholder="yyyy-MM-dd hh:mm:ss" ng-model="chart.stop_date">
                 </div>
               </div><!-- /.row -->
               <div class="row">
