--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -149,7 +149,7 @@
   </div><!-- /container -->
 
   <!-- Login modal -->
-  <div id="loginModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby='loginModal' aria-hidden='true' ng-controller="LoginCtrl">
+  <div id="loginModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby='loginModal' aria-hidden='true' ng-controller="LoginCtrl" data-backdrop="static" data-keyboard="false">
       <div class='modal-header'>
           <h3 id="modalLoginLabel">Login</h3>
       </div>
