--- a/src/haf/powr/static/powr/partials/graphs/new.html
+++ b/src/haf/powr/static/powr/partials/graphs/new.html
@@ -182,8 +182,8 @@ absolute or relative dates.">
         <fieldset>
           <legend></legend>
           <button type="reset" class="btn btn btn-danger" id="reset_button">Start Over</button>
-          <button type="button" class="btn btn btn-success" id="preview_button">Preview</button>
-          <button type="submit" class="btn btn-primary" id="save_button" ng-click="save()">Save Graph</button>
+          <button type="button" class="btn btn btn-success" id="preview_button" ng-click="showGraph()">Preview</button>
+          <button type="submit" class="btn btn-primary" id="save_button" ng-click="create()">Save Graph</button>
         </fieldset>
       </div> <!-- /#button_bar -->
       <div id="preview" style="height:300px; width:500px; margin:auto;" align="center">
