I made it pretty! ... dont worry, its easily fixed :P
git-svn-id: svn://dunari.cis.vtc.edu/POWER@526 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -15,8 +15,9 @@
   <link href="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/jquery.jqplot.css" rel="stylesheet" type="text/css">
   <link href="{{ STATIC_URL }}components/intro.js/introjs.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.jqplot.min.css" />
+  
   {% endcompress %}
-
+	<link href="http://divshot.github.io/geo-bootstrap/swatch/bootstrap.min.css" rel="stylesheet" type="text/css">
   <!-- This should not be compressed. Keep comments for prospective developers.... -->
   <script>
     // Global variables
