Fixed Forest's joke
git-svn-id: svn://dunari.cis.vtc.edu/POWER@580 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.jqplot.min.css" />
   
   {% endcompress %}
-	<link href="http://divshot.github.io/geo-bootstrap/swatch/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<!-- <link href="http://divshot.github.io/geo-bootstrap/swatch/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
   <!-- This should not be compressed. Keep comments for prospective developers.... -->
   <script>
     // Global variables
